# llm-embedded

./: .gitmodules  README.md
esp32/: sdkconfig
esp32/main/: CMakeLists.txt  llm.c  main.c
k210/hello_llm/: CMakeLists.txt  README.md  llm.c  main.c  project_cfg.h
linux/: .gitignore  Makefile  llm.c  llm.h  main.c
